--- a/paymentservice/src/main/resources/application-test.yaml
+++ b/paymentservice/src/main/resources/application-test.yaml
@@ -7,7 +7,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   application:
     name: PAYMENT-SERVICE
   config:
