--- a/paymentservice/src/main/resources/application.yml
+++ b/paymentservice/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   application:
     name: PAYMENT-SERVICE
   config:
-    import: configserver:http://${CONFIG_SERVER_URL:localhost}:9296
+    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
 
 jwt:
   secret: mySecretKey
