Task 30 : Add mysql config to auth service, order service, payment service and product service for Kubernetes

--- a/k8s/product-service-deployment.yaml
+++ b/k8s/product-service-deployment.yaml
@@ -28,6 +28,12 @@ spec:
                 configMapKeyRef:
                   name: eureka-cm
                   key: eureka_service_address
+            - name: DB_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: mysql-cm
+                  key: hostname
+
 
 ---
 
