--- a/k8s/order-service-deployment.yaml
+++ b/k8s/order-service-deployment.yaml
@@ -28,6 +28,11 @@ spec:
                 configMapKeyRef:
                   name: eureka-cm
                   key: eureka_service_address
+            - name: DB_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: mysql-cm
+                  key: hostname
 
 ---
 
