Task 34 : Revise all services yaml for imagePullPolicy of Kubernetes

--- a/k8s/auth-service-deployment.yaml
+++ b/k8s/auth-service-deployment.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
         - name: auth-service-app
           image: noyandocker/authservice
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 7777
           env:
