--- a/k8s/cloud-gateway-deployment.yaml
+++ b/k8s/cloud-gateway-deployment.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
         - name: cloud-gateway-app
           image: noyandocker/apigateway
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9090
           env:
