--- a/k8s/service-registry-statefulset.yaml
+++ b/k8s/service-registry-statefulset.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: eureka
           image: noyandocker/serviceregistry
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8761
 
