Task 40 : Add actuator dependency for all microservices

--- a/apigateway/pom.xml
+++ b/apigateway/pom.xml
@@ -96,6 +96,11 @@
 			<version>${jaxb.api.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
