--- a/orderservice/pom.xml
+++ b/orderservice/pom.xml
@@ -113,6 +113,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
