Task 41 : Add readinessProbe and livenessProbe for config-server-deployment.yaml and cloud-gateway-deployment.yaml

--- a/k8s/cloud-gateway-deployment.yaml
+++ b/k8s/cloud-gateway-deployment.yaml
@@ -17,6 +17,18 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9090
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 9090
+            initialDelaySeconds: 180
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 9090
+            initialDelaySeconds: 180
+            periodSeconds: 10
           env:
             - name: CONFIG_SERVER_URL
               valueFrom:
