--- a/k8s/payment-service-deployment.yaml
+++ b/k8s/payment-service-deployment.yaml
@@ -17,6 +17,18 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8083
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8083
+            initialDelaySeconds: 20
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8083
+            initialDelaySeconds: 20
+            periodSeconds: 10
           env:
             - name: CONFIG_SERVER_URL
               valueFrom:
