--- a/k8s/config-maps.yaml
+++ b/k8s/config-maps.yaml
@@ -1,24 +1,23 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-cm
 data:
-  config_url: "config-server-svc"
+  config_url: "http://config-server-svc:9296"
 
 ---
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: eureka-cm
 data:
-  eureka_service_address: "http://eureka-0.eureka:8761/eureka"
+  eureka_service_address: "http://eureka:8761/eureka"
 
 ---
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-cm
 data:
-  hostname: "mysql-0.mysql"
+  hostname: "mysql"
