--- a/k8s/config-maps.yaml
+++ b/k8s/config-maps.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   name: config-cm
 data:
-  config_url: "http://config-server-svc:9296"
+  config_url: "config-server-svc"
 
 ---
 apiVersion: v1
