Task 64 : Update docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   serviceregistry:
-    image: 'microservicedailybuffer/serviceregistry:0.0.1'
+    image: 'noyandocker/serviceregistry:latest'
     container_name: serviceregistry
     ports:
       - '8761:8761'
@@ -9,7 +9,7 @@ services:
       - backend
 
   configserver:
-    image: 'microservicedailybuffer/configserver:0.0.1'
+    image: 'noyandocker/configserver:latest'
     container_name: configserver
     ports:
       - '9296:9296'
@@ -26,7 +26,7 @@ services:
       - backend
 
   apigateway:
-    image: 'microservicedailybuffer/apigateway:0.0.1'
+    image: 'noyandocker/apigateway:latest'
     container_name: apigateway
     ports:
       - '9090:9090'
@@ -62,7 +62,7 @@ services:
 
 
   authservice:
-    image: 'microservicedailybuffer/authservice:0.0.1'
+    image: 'noyandocker/authservice:latest'
     container_name: authservice
     ports:
       - '7777:7777'
@@ -82,7 +82,7 @@ services:
 
 
   productservice:
-    image: 'microservicedailybuffer/productservice:0.0.1'
+    image: 'noyandocker/productservice:latest'
     container_name: productservice
     ports:
       - '8081:8081'
@@ -104,7 +104,7 @@ services:
       - backend
 
   orderservice:
-    image: 'microservicedailybuffer/orderservice:0.0.1'
+    image: 'noyandocker/orderservice:latest'
     container_name: orderservice
     ports:
       - '8082:8082'
@@ -127,7 +127,7 @@ services:
 
 
   paymentservice:
-    image: 'microservicedailybuffer/paymentservice:0.0.1'
+    image: 'noyandocker/paymentservice:latest'
     container_name: paymentservice
     ports:
       - '8083:8083'
