--- a/orderservice/src/main/resources/application.yml
+++ b/orderservice/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://${DB_HOST:localhost}:3306/orderdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Turkey
-    username: springmicroserviceuser
-    password: 111111
+    username: root
+    password: ippavlova_1990
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL57InnoDBDialect
