--- a/productservice/src/main/resources/application-test.yaml
+++ b/productservice/src/main/resources/application-test.yaml
@@ -11,7 +11,7 @@ spring:
   application:
     name: PRODUCT-SERVICE
   config:
-    import: configserver:http://localhost:9296
+    import: optional:configserver:http://localhost:9296
 
 
 jwt:
