--- a/productservice/src/main/resources/application.yml
+++ b/productservice/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   application:
     name: PRODUCT-SERVICE
   config:
-    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
+    import: optional:configserver:${CONFIG_SERVER_URL:http://localhost:9296}
 
 #eureka:
 #  instance:
