Task 75 : Update auth-service-deployment.yaml and config-maps.yaml

--- a/k8s/config-maps.yaml
+++ b/k8s/config-maps.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: config-cm
 data:
-  config_url: "config-server-svc"
+  config_url: "http://config-server-svc"
 
 ---
 
